--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -21,8 +21,15 @@ Vagrant.configure("2") do |config|
       curl -sfL https://get.k3s.io | sh -s - --write-kubeconfig-mode 644
 
       # Déployer Nginx
+      # App 1
       kubectl apply -f /vagrant/confs/configmap-app1.yaml
       kubectl apply -f /vagrant/confs/nginx-deployment-app1.yaml
+      # App 2
+      kubectl apply -f /vagrant/confs/configmap-app2.yaml
+      kubectl apply -f /vagrant/confs/nginx-deployment-app2.yaml
+      # App 3
+      kubectl apply -f /vagrant/confs/configmap-app3.yaml
+      kubectl apply -f /vagrant/confs/nginx-deployment-app3.yaml
       echo "Nginx deployment succeeded."
       
       # Déployer Ingress
@@ -33,6 +40,14 @@ Vagrant.configure("2") do |config|
       if ! grep -q "app1.com" /etc/hosts; then
           echo "192.168.56.110 app1.com" | sudo tee -a /etc/hosts
           echo "Added app1.com to /etc/hosts"
+      fi
+      if ! grep -q "app2.com" /etc/hosts; then
+          echo "192.168.56.110 app2.com" | sudo tee -a /etc/hosts
+          echo "Added app2.com to /etc/hosts"
+      fi
+      if ! grep -q "app3.com" /etc/hosts; then
+          echo "192.168.56.110 app3.com" | sudo tee -a /etc/hosts
+          echo "Added app3.com to /etc/hosts"
       fi
     SHELL
   end
