--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -18,7 +18,7 @@ Vagrant.configure("2") do |config|
       sudo apt-get update -y
       sudo apt-get install -y curl net-tools nginx
   
-      curl -sfL https://get.k3s.io | sh -s - --write-kubeconfig-mode 644
+      curl -sfL https://get.k3s.io | sh -s - --write-kubeconfig-mode 644 --node-ip 192.168.56.110
 
       # Déployer Nginx
       # App 1
