--- a/p2/confs/nginx-ingress.yaml
+++ b/p2/confs/nginx-ingress.yaml
@@ -34,3 +34,13 @@ spec:
             name: app3
             port:
               number: 80
+  - host: ""
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: app3
+            port:
+              number: 80
